plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.5'
	id 'io.spring.dependency-management' version '1.1.6'
	id 'jacoco'
}

group = 'com.api.football'
version = '1.0'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(23)
	}
}

jacoco {
	toolVersion = "0.8.13"
	reportsDirectory = layout.buildDirectory.dir('reports/jacocoReport')
}

jacocoTestReport {
	dependsOn('test') // Garante que os testes sejam executados antes do relatório ser gerado
	afterEvaluate {
		classDirectories.setFrom(
			fileTree(
					dir: "${layout.buildDirectory.get().asFile}/classes/java/main",
					excludes: ['/com/api/football/teams/config/*'] // Exclui o pacote de configuração
			)
		)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.6.0'
	implementation 'org.flywaydb:flyway-core'
	implementation 'org.flywaydb:flyway-database-postgresql'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'org.postgresql:postgresql'
	annotationProcessor 'org.projectlombok:lombok'
	implementation group: 'org.modelmapper', name: 'modelmapper', version: '3.2.1'
	implementation group: 'org.modelmapper', name: 'modelmapper-module-record', version: '1.0.0'
	testImplementation group: 'com.h2database', name: 'h2', version: '2.3.232'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation 'net.datafaker:datafaker:2.4.2'
}

tasks.named('test') {
	useJUnitPlatform()
}
